--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="reset.css">
-    <link rel="shortcut icon" href="./assets/" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logoZapRecall.png" type="image/x-icon">
     <link href = "https: //fonts.googleapis.com/css2? família = Roboto: peso @ 400; 500; 700 & display = swap "rel =" stylesheet ">
     <title>ZapRecall</title>
   </head>
